--- a/index.html
+++ b/index.html
@@ -26,11 +26,62 @@
     </div>
     <div id="balloonBoard"></div>
 
+
+    <!-- Show Alert modal -->
+    <div class="modal fade" id="showAlertModal" tabindex="-1" role="dialog" aria-labelledby="showAlertModal" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="showAlertModalLabel">Alert</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <p id="alertMessage" disabled></p>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" id="alertAcknowledgedButton" onclick="closeAlert()">OK</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Show Prompt modal -->
+    <div class="modal fade" id="showPromptModal" tabindex="-1" role="dialog" aria-labelledby="showPromptModal" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="showPromptModalLabel">Prompt</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <p id="promptMessage" disabled></p>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" id="promptCancelButton" onclick="closePrompt()">Cancel</button>
+            <button type="button" class="btn btn-danger" id="promptProceedButton" onclick="closePrompt()">Proceed</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Foreign JS Files -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="./index.js"></script>
+    <script src="./js/resources.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
