[Modify] CSS changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-danger" id="alertAcknowledgedButton" onclick="closeAlert()">OK</button>
+            <button type="button" class="btn blue-button" id="alertAcknowledgedButton" onclick="closeAlert()">OK</button>
           </div>
         </div>
       </div>
@@ -68,8 +68,8 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" id="promptCancelButton" onclick="closePrompt()">Cancel</button>
-            <button type="button" class="btn btn-danger" id="promptProceedButton" onclick="closePrompt()">Proceed</button>
+            <button type="button" class="btn btn-secondary" id="promptCancelButton" onclick="closePrompt()">Cancel</button>
+            <button type="button" class="btn blue-button" id="promptProceedButton" onclick="closePrompt()">Proceed</button>
           </div>
         </div>
       </div>
