--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <div class="navbar">
-      <div class="nav-half">
+    <div class="navbar row">
+      <div class="col-5">
+        <h1>Balloon Pop</h1>
+      </div>
+      <div class="col-2"></div>
+      <div class="col-5">
+        <span class="nav-half">Total</span>
+        <span id="totalBalloons" class="nav-half">0</span>
+        <span class="nav-half">Popped</span>
+        <span id="poppedBalloons" class="nav-half">0</span>
+      </div>
+      <!-- <div class="nav-half">
         <span class="nav-half">Total</span>
         <span id="totalBalloons" class="nav-half">0</span>
       </div>
       <div class="nav-half">
         <span class="nav-half">Popped</span>
         <span id="poppedBalloons" class="nav-half">0</span>
-      </div>
+      </div> -->
     </div>
     <div id="balloonBoard"></div>
 
