[Modify] CSS height stuffs

--- a/index.html
+++ b/index.html
@@ -19,19 +19,11 @@
       </div>
       <div class="col-2"></div>
       <div class="col-5">
-        <span class="nav-half">Total</span>
-        <span id="totalBalloons" class="nav-half">0</span>
-        <span class="nav-half">Popped</span>
-        <span id="poppedBalloons" class="nav-half">0</span>
+        <span>Total</span>
+        <span id="totalBalloons">0</span>
+        <span>Popped</span>
+        <span id="poppedBalloons">0</span>
       </div>
-      <!-- <div class="nav-half">
-        <span class="nav-half">Total</span>
-        <span id="totalBalloons" class="nav-half">0</span>
-      </div>
-      <div class="nav-half">
-        <span class="nav-half">Popped</span>
-        <span id="poppedBalloons" class="nav-half">0</span>
-      </div> -->
     </div>
     <div id="balloonBoard"></div>
 
