--- a/index.html
+++ b/index.html
@@ -14,18 +14,28 @@
   </head>
   <body>
     <div class="navbar row">
-      <div class="col-5">
-        <h1>Balloon Pop</h1>
+      <div class="col-lg-3 col-sm-5 col-6">
+        <img src="./logo.png">
       </div>
-      <div class="col-2"></div>
-      <div class="col-5">
-        <span>Total</span>
+      <div class="col-sm-2" ></div>
+      <div class="col-sm-5">
+        <!-- <span>Total</span>
         <span id="totalBalloons">0</span>
         <span>Popped</span>
-        <span id="poppedBalloons">0</span>
+        <span id="poppedBalloons">0</span> -->
       </div>
     </div>
     <div id="balloonBoard"></div>
+    <footer class="row">
+      <span class="col-3 offset-4">
+        <span class="recede-margin">Total</span>
+        <span id="totalBalloons">0</span>
+      </span>
+      <span class="col-3 offset-1">
+        <span>Popped</span>
+        <span id="poppedBalloons">0</span>
+      </span>
+    </footer>
 
 
     <!-- Show Alert modal -->
