[Modify] Adding first visit cookies and messages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="balloonBoard"></div>
     <footer class="row">
       <span class="col-3 offset-4">
-        <span class="recede-margin">Total</span>
+        <span class="recede-text-margin">Total</span>
         <span id="totalBalloons">0</span>
       </span>
       <span class="col-3 offset-1">
@@ -92,6 +92,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <script src="./js/cookies.js"></script>
     <script src="./js/resources.js"></script>
     <script src="./js/index.js"></script>
   </body>
