[Modify] Changed header title and added highest score section on footer

--- a/index.html
+++ b/index.html
@@ -14,19 +14,30 @@
   </head>
   <body>
     <div class="navbar row">
-      <div class="col-lg-3 col-sm-5 col-6">
-        <img src="./logo.png">
-      </div>
-      <div class="col-sm-2" ></div>
-      <div class="col-sm-5">
-        <!-- <span>Total</span>
-        <span id="totalBalloons">0</span>
-        <span>Popped</span>
-        <span id="poppedBalloons">0</span> -->
-      </div>
+      <h1 class="app-name" id="appName">
+        Balloon Pop
+      </h1>
     </div>
     <div id="balloonBoard"></div>
-    <footer class="row">
+    <footer>
+      <span>
+        <span>Total</span>
+        <span id="totalBalloons">0</span>
+      </span>
+      <span>
+        <span>Popped</span>
+        <span id="poppedBalloons">0</span>
+      </span>
+      <span>
+        <span>Missed</span>
+        <span id="missedBalloons">0</span>
+      </span>
+      <span id="highestPoppedBalloonsSpan">
+        <span>Highest</span>
+        <span id="highestPoppedBalloons">0</span>
+      </span>
+    </footer>
+    <!-- <footer class="row">
       <span class="col-3 offset-4">
         <span class="recede-text-margin">Total</span>
         <span id="totalBalloons">0</span>
@@ -35,7 +46,7 @@
         <span>Popped</span>
         <span id="poppedBalloons">0</span>
       </span>
-    </footer>
+    </footer> -->
 
 
     <!-- Show Alert modal -->
