[Add] Added a buymeacoffee button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h1 class="app-name" id="appName">
         Balloon Pop
       </h1>
+      <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="harshankur" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
     </div>
     <div id="balloonBoard"></div>
     <footer>
@@ -37,16 +38,6 @@
         <span id="highestPoppedBalloons">0</span>
       </span>
     </footer>
-    <!-- <footer class="row">
-      <span class="col-3 offset-4">
-        <span class="recede-text-margin">Total</span>
-        <span id="totalBalloons">0</span>
-      </span>
-      <span class="col-3 offset-1">
-        <span>Popped</span>
-        <span id="poppedBalloons">0</span>
-      </span>
-    </footer> -->
 
 
     <!-- Show Alert modal -->
