--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="description" content="A simple balloon popping game. Gotta pop 'em all!">
     <meta name="author" content="Harsh Ankur">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Balloon Pop</title>
 
     <!-- Foreign CSS Files -->
