[Modify] Added mobile browser UI and logic support

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <div class="navbar row">
+    <div class="navbar">
       <h1 class="app-name" id="appName">
         Balloon Pop
       </h1>
