[Modify] Added favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="index.css">
+
+    <link rel="icon" type="image/x-icon" href="logo.png">
   </head>
   <body>
     <div class="navbar">
