[Add] Added audio for balloon pops

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     </footer>
 
 
+    <audio id="balloonPopAudio" style="display:none">
+      <source src="./balloonPop.flac" type="audio/flac">
+    </audio>
+
+
     <!-- Show Intro Alert modal -->
     <div class="modal fade" id="showIntroAlertModal" tabindex="-1" role="dialog" aria-labelledby="showIntroAlertModal" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
