[Modify] Changed audio format

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
     <audio id="balloonPopAudio" style="display:none">
-      <source src="./balloonPop.flac" type="audio/flac">
+      <source src="./balloonPop.mp3" type="audio/mp3">
     </audio>
 
 
